[package]
name = "rs-aggregate"
version = "0.2.0"
authors = ["Keenan Tims <ktims@gotroot.ca>"]
edition = "2021"
description = "Aggregate a list of IP prefixes into their minimum equivalent representation"
readme = "README.md"
repository = "https://github.com/ktims/rs-aggregate"
license = "MIT"
categories = ["network-programming"]

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clio = { version = "0.2.7", features = ["clap-parse"] }
ipnet = "2.7.1"
iprange = "0.6.7"

[dev-dependencies]
assert_cmd = "2.0.10"
assert_fs = "1.0.12"
predicates = "3.0.1"
rstest = "0.16.0"
glob = "0.3.1"

[[bin]]
name = "rs-aggregate"
