[package]
name = "rs-aggregate"
version = "0.3.0"
authors = ["Keenan Tims <ktims@gotroot.ca>"]
edition = "2021"
description = "Aggregate a list of IP prefixes into their minimum equivalent representation"
readme = "README.md"
repository = "https://github.com/ktims/rs-aggregate"
license = "MIT"
categories = ["network-programming"]
exclude = [
	".github/*",
	"doc/*",
	"test-data/*",
]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
clio = { version = "0.3.4", features = ["clap-parse"] }
ipnet = "2.8.0"

[dev-dependencies]
assert_cmd = "2.0.10"
assert_fs = "1.0.12"
predicates = "3.0.1"
rstest = "0.16.0"
glob = "0.3.1"
tempfile = "3.8.1"
json = "0.12.4"
plotters = "0.3.5"
rand_chacha = "0.3.1"
rand = "0.8.5"

[[bin]]
name = "rs-aggregate"

[[bench]]
name = "perf"
harness = false
